feat: one keystore (re)loaded per server id + refactor